# SDL3_Space

./: .gitignore  CMakeLists.txt
private/SpaceLib/: CMakeLists.txt
private/SpaceLib/include/: SpaceGame.hpp  SpaceGame_Buttons.hpp  SpaceGame_DataStructures.hpp  SpaceGame_Engine.hpp  SpaceGame_Enums.hpp  SpaceGame_GameScreens.hpp  SpaceGame_Macros.hpp  SpaceGame_PlanetManager.hpp  SpaceGame_Renderer.hpp  SpaceGame_ScoreCounter.hpp  SpaceGame_Utils.hpp  SpaceGame_VisualElements.hpp  SpaceHeader.hpp
private/SpaceLib/lib/Engine/: SpaceLib_GameClass_Constructor.cpp  SpaceLib_GameClass_Input.cpp  SpaceLib_GameClass_PublicInterface.cpp  SpaceLib_GameClass_StateMachine.cpp  SpaceLib_Renderer.cpp
private/SpaceLib/lib/GameClass/: SpaceLib_SpaceGame_Background.cpp  SpaceLib_SpaceGame_Constructor.cpp  SpaceLib_SpaceGame_DeltaTime.cpp  SpaceLib_SpaceGame_ElementRendering.cpp  SpaceLib_SpaceGame_GameUtils.cpp  SpaceLib_SpaceGame_Gameplay.cpp  SpaceLib_SpaceGame_InputHandling.cpp  SpaceLib_SpaceGame_Math.cpp  SpaceLib_SpaceGame_PublicInterface.cpp  SpaceLib_SpaceGame_ScreenRendering.cpp  SpaceLib_SpaceGame_StateMachine.cpp
private/SpaceLib/lib/Game_States/: SpaceLib_DeathScreen.cpp  SpaceLib_GameScreen.cpp  SpaceLib_MainMenu.cpp  SpaceLib_PauseMenu.cpp
private/SpaceLib/lib/Game_Utils/: SpaceLib_PlanetManager.cpp  SpaceLib_ScoreCounter.cpp  SpaceLib_Utils.cpp
private/SpaceLib/lib/RendererClass/: SpaceLib_Renderer_Constructor.cpp  SpaceLib_Renderer_CoordinateGrid.cpp  SpaceLib_Renderer_Math.cpp  SpaceLib_Renderer_PlanetRendering.cpp  SpaceLib_Renderer_ScreenRendering.cpp
private/SpaceLib/lib/UI_Elements/: SpaceLib_GameTitle.cpp  SpaceLib_HomeButton.cpp  SpaceLib_PlayButton.cpp
private/SpaceLib/lib/Visual_Elements/: SpaceLib_Background.cpp  SpaceLib_GameTitle.cpp  SpaceLib_HomeButton.cpp  SpaceLib_PlayButton.cpp  SpaceLib_ScreenButton_Parent.cpp  SpaceLib_Title_Parent.cpp
source/: main.cpp
